--- a/src/locales/pt-BR.json
+++ b/src/locales/pt-BR.json
@@ -80,29 +80,49 @@
           "architecture": ["Prototipação", "Testes de usuário", "Testes de UI"]
         }
       }
-    }
-  },
-  "home": {
-    "carouselItem1": ["Eu sou um", "engenheiro de software", "aqui do Brasil!"],
-    "carouselItem2": ["Olá!", "Meu nome é", "Walber Oliveira"]
-  },
-  "about": {
-    "subtitle": "Bem vindo",
-    "title": "Sobre mim",
-    "text": "Um pequeno rio chamado Duden corre por seu lugar e o abastece com a necessária regalia. É um país paradisíaco, em que pedaços torrados de frases voam para a boca.",
-    "roles": [
-      {
-        "title": "Desenvolvedor front end",
-        "text": "Um pequeno rio chamado Duden flui por seu lugar e suprimentos."
-      },
-      {
-        "title": "Desenvolvedor back end",
-        "text": "Um pequeno rio chamado Duden flui por seu lugar e suprimentos."
-      },
-      {
-        "title": "Arquiteto de software",
-        "text": "Um pequeno rio chamado Duden flui por seu lugar e suprimentos."
+    },
+    "hireMe": {
+      "iam": "Eu estou",
+      "available": "disponível",
+      "forFreelancing": "para freelancing",
+      "btnText": "Contrate-me"
+    },
+    "portfolio": {
+      "title": "Nosso Portifólio",
+      "subtitle": "Portifólio",
+      "text": "Um pequeno rio chamado Duden corre por seu lugar e o abastece com a necessária regalia. É um país paradisíaco, em que pedaços torrados de frases voam para a boca.",
+      "projects": [
+        {
+          "title": "My website",
+          "subtitle": "Este website foi desenvolvido aqui mesmo"
+        },
+        {
+          "title": "Keycloak",
+          "subtitle": "Autenticação e autorização de front end e back end com Keycloak"
+        },
+        {
+          "title": "Pagamentos com cartões de crédito",
+          "subtitle": "Middleware de pagamentos com cartão integrado com o PagSeguro"
+        }
+      ]
+    },
+    "blog": {
+      "title": "Nosso blog",
+      "subtitle": "Blog",
+      "text": "Um pequeno rio chamado Duden corre por seu lugar e o abastece com a necessária regalia. É um país paradisíaco, em que pedaços torrados de frases voam para a boca.",
+      "warning": "Em breve!"
+    },
+    "contact": {
+      "title": "Contato",
+      "subtitle": "Contate-me",
+      "text": "Um pequeno rio chamado Duden corre por seu lugar e o abastece com a necessária regalia. É um país paradisíaco, em que pedaços torrados de frases voam para a boca.",
+      "form": {
+        "yourName": "Seu nome",
+        "yourEmail": "Seu email",
+        "subject": "Assunto",
+        "message": "Mensagem",
+        "btnSubmit": "Enviar"
       }
-    ]
+    }
   }
 }
