Alterando textos na secção Footer

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -115,6 +115,10 @@
         "message": "Message",
         "btnSubmit": "Submit"
       }
+    },
+    "footer": {
+      "socialNetworks": "Social networks",
+      "copyright": "Copyright ©2023 All rights reserved | This template is made by walloliveira.dev.br"
     }
   }
 }
